# platform.upstream.sqlite

./: LICENSE.PublicDomain  Makefile.am  autogen.sh  configure.ac  project.config  shell.c  sqlite-autoconf-3071400.tar.gz.delta  sqlite-autoconf-3071400.tar.gz.id  sqlite-autoconf-3081002.tar.gz.delta  sqlite-autoconf-3081002.tar.gz.id  sqlite3.h  sqlite3.manifest
packaging/: baselibs.conf  sqlite.changes  sqlite.spec  sqlite_default_journalmode.patch
